--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,8 +2,8 @@ body {
     position: relative;
     margin: 0;
     height: 100vh;
-    background: none; /* 移除原有背景图 */
-    z-index: 0; /* 确保伪元素不会遮挡其他内容 */
+    background: none; 
+    z-index: 0; 
 }
 
 body::before {
@@ -17,9 +17,9 @@ body::before {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    opacity: 0.8; /* 设置背景透明度 */
-    z-index: -1; /* 让背景图位于内容下方 */
-    pointer-events: none; /* 确保背景图不会干扰用户操作 */
+    opacity: 0.8; 
+    z-index: -1; 
+    pointer-events: none; 
 }
 .wrapper {
     width: 100vw;
@@ -454,19 +454,19 @@ button.del:active {
     top: 50%;
     left: 10px;
     padding: 8px 0;
-    transform: translateY(-50%) scaleX(0); /* 初始缩放为 0 */
+    transform: translateY(-50%) scaleX(0);
     width: 140%;
     height: 100%;
-    background: rgba(240, 241, 244); /* 默认背景色 */
-    border-radius: 25px; /* 圆角效果 */
-    z-index: -1; /* 背景在文字后面 */
+    background: rgba(240, 241, 244); 
+    border-radius: 25px; 
+    z-index: -1; 
     transition: transform 0.4s ease-in-out, border-radius 0.4s ease-in-out, background-color 0.4s ease-in-out;
 }
 
 .left .content li:hover::before {
-    transform: translateY(-50%) scaleX(1); /* 放大到 100% */
-    background: rgba(240, 241, 244); /* 背景颜色保持一致 */
-    border-radius: 25px; /* 圆角效果保持一致 */
+    transform: translateY(-50%) scaleX(1);
+    background: rgba(240, 241, 244);
+    border-radius: 25px;
 }
 
 .left .content li.active::before {
@@ -475,19 +475,19 @@ button.del:active {
     top: 50%;
     left: 10px;
     padding: 8px 0;
-    transform: translateY(-50%) scaleX(0); /* 初始缩放为 0 */
+    transform: translateY(-50%) scaleX(0); 
     width: 140%;
     height: 100%;
-    background: rgba(240, 241, 244); /* 默认背景色 */
-    border-radius: 25px; /* 圆角效果 */
-    z-index: -1; /* 背景在文字后面 */
+    background: rgba(240, 241, 244); 
+    border-radius: 25px; 
+    z-index: -1; 
     transition: transform 0.4s ease-in-out, border-radius 0.4s ease-in-out, background-color 0.4s ease-in-out;
 }
 
 .left .content li.active::before {
-    transform: translateY(-50%) scaleX(1); /* 放大到 100% */
-    background: rgba(240, 241, 244); /* 背景颜色保持一致 */
-    border-radius: 25px; /* 圆角效果保持一致 */
+    transform: translateY(-50%) scaleX(1);
+    background: rgba(240, 241, 244); 
+    border-radius: 25px; 
 }
 
 .btn-danger {
